@@ -1,3 +1,9 @@
+2020-10-27 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/ralloc2.cc,
+	  src/pdk/gen.c:
+	  Improve register allocation for bitwise xor.
+
 2020-10-26 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/bug-3135.c,
@@ -5,7 +11,7 @@
 	  Attempt to fix bug #3135.
 	* src/pdk/ralloc2.cc,
 	  src/pdk/gen.c:
-	  Improve register allocation for bitwise operations.
+	  Improve register allocation for bitwise and, or.
 
 2020-10-21 Sergey Belyashov <sergey.belyashov@gmail.com>
 
